@@ -13,7 +13,7 @@ config:
 	  window:
 	  {
 		title = "object_fab demo";
-		size = { w = 600; h = 500 };
+		size = { w = 1280; h = 720 };
 
 		background = { r = 100; g = 100; b = 100; a = 255 };
 	  };
@@ -29,21 +29,48 @@ config:
 		}
 	  );
 
-	  objects = (
+	  players = (
 	  	{
 			name = "player";
 			texture = "player";
-			init_pos = { x = 0; y = 400; };
-		},
+			pos_x = 0;
+			pos_y = 400;
+		}
+	  );
+
+	  objects = (
 		{
 			name = "fixed_1";
 			texture = "others";
-			init_pos = { x = 100; y = 300; };
+			pos_x = 100;
+			pos_y = 300;
 		},
 		{
 			name = "fixed_2";
 			texture = "others";
-			init_pos = { x = 50; y = 100; };
+			pos_x = 50;
+			pos_y = 100;
+		}
+	  );
+
+	  enemies = (
+		{
+			name = "enemie_1";
+			texture = "others";
+			pos_x = 100;
+			pos_y = 300;
+		},
+		{
+			name = "enemie_2";
+			texture = "others";
+			pos_x = 50;
+			pos_y = 100;
+		},
+		{
+			name = "enemie_3";
+			texture = "others";
+			pos_x = 50;
+			pos_y = 100;
 		}
 	  );
 }
